fix: qr code img height  stretched in safari but not other browsers

--- a/newbie/qr-code-component/main.css
+++ b/newbie/qr-code-component/main.css
@@ -31,6 +31,7 @@ main {
 }
 
 img {
+  max-height: 343px;
   padding: 16px;
   border-radius: 26px;
 }
